--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Yo</title>
-		<link rel="stylesheet" href="estilo/parte1.css" />
+		<link rel="stylesheet" href="estilo/style.css" />
 		<link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
